syntax = "proto3";

package order.v1;

option go_package = "github.com/kolkov/voyager/proto/order/v1;orderv1";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  float total_amount = 3;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  float price = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
  string transaction_id = 3;
}